fix thumnail size, truncate intro text

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -620,7 +620,7 @@
                 }
 
                 &-left {
-                    width: 250px;
+                    width: 408px;
 
                     @include respond-to(mobile) {
                         width: 100%;
@@ -628,11 +628,14 @@
                     }
 
                     img {
-                        width: 250px;
+                        width: 100%;
                         height: 250px;
                         background: #D3D3D3;
                         border-radius: 4.77273px;
-                        object-fit: cover;
+                        // object-fit: cover;
+                        object-fit: contain;
+                        object-position: top;
+                        background: transparent;
 
                         @include respond-to(mobile) {
                             width: 100%;
@@ -644,7 +647,7 @@
 
                 &-right {
                     flex: 1;
-                    margin-left: 44px;
+                    margin-left: 41px;
                     display: flex;
                     flex-direction: column;
 
